# MAST-Parser

./: .env.example  .gitignore  README.md  pyproject.toml  эссе.txt
mast_parser/: .env.example  __init__.py  __main__.py  alembic.ini  db.py  main.py  settings.py
mast_parser/alembic/: env.py
mast_parser/alembic/versions/: 272b71514f2a_переименовано_поле.py  eda5bc7db7ea_initial_migration.py  f155fe274ece_добавили_флаг_индикатор_отправки.py
mast_parser/export/: csv.py
mast_parser/models/: __init__.py  person.py
mast_parser/notify/: email.py  sender.py
mast_parser/parser/: spider.py  utils.py
mast_parser/tasks/: __init__.py  notifying.py  scrapping.py
